--- a/PoCProject/pom.xml
+++ b/PoCProject/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>jcalendar</artifactId>
             <version>1.4</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.github.lgooddatepicker/LGoodDatePicker -->
+<dependency>
+    <groupId>com.github.lgooddatepicker</groupId>
+    <artifactId>LGoodDatePicker</artifactId>
+    <version>11.1.0</version>
+</dependency>
+
 
     </dependencies>
     
